--- a/build.gradle
+++ b/build.gradle
@@ -34,4 +34,7 @@ dependencies {
 	compile 'mysql:mysql-connector-java'
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	testImplementation('org.springframework.restdocs:spring-restdocs-mockmvc')
+
+	// use gson for easy json
+	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 }
