moved location in local

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,20 @@
 application.properties
-.idea/*
-/out*
-/.*
-/.
+.idea/
 out
-out*
-.
 .*
+.
+out*
+build/classes/
+build/generated/
+build/libs/
+build/reports/
+build/resources/main/static/
+build/resources/main/templates/
+build/tmp/
+src/main/java/com/bierbrauer/gametime/exceptions/
+src/main/resources/static/
+src/main/resources/templates/
+src/test/resources/
+build/
+out/
+src/
